# reichenberg-ruhr

./: .env.example  .gitignore  DEPLOY.md  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
.github/workflows/: deploy.yml  llm-cache-ci.yml  ollama-monitor-ci.yml
langfuse/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
litellm-proxy/: .env.example  CLAUDE.md  README.md  docker-compose.yml  litellm_config.yaml
llm-cache/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
llm-cache/src/llm_cache/: __init__.py  __main__.py  cli.py  config.py  keys.py  logging.py  metrics.py  proxy.py  semantic.py  store.py
llm-cache/tests/: test_cli.py  test_config.py  test_keys.py  test_metrics.py  test_proxy.py  test_store.py
llm-usage/: .gitignore  CLAUDE.md  README.md  pyproject.toml
llm-usage/examples/: sample-litellm.jsonl
llm-usage/src/llm_usage/: __init__.py  __main__.py  cli.py  db.py  ingest.py  models.py  pricing.py  pricing.yaml
llm-usage/tests/: test_cli.py  test_db.py  test_ingest.py  test_pricing.py
metrics-api/: .env.example  README.md  package-lock.json  package.json
metrics-api/src/: cache.ts  github.ts  index.ts  tools.ts
ollama-monitor/: CLAUDE.md  README.md  pyproject.toml
ollama-monitor/src/ollama_monitor/: __init__.py  __main__.py  api.py  app.py  config.py  gpu.py
ollama-monitor/src/ollama_monitor/widgets/: __init__.py  latency_panel.py  models_table.py  throughput_graph.py
ollama-monitor/tests/: test_api.py  test_app.py  test_config.py  test_gpu.py
public/: CNAME  robots.txt  sitemap.xml
scripts/binance/: README.md  __init__.py  client.py  config.py  cycle.py  digest.py  phase1.py  portfolio.py  risk.py  strategy.py
scripts/binance/fixtures/: account.json  klines.json  my_trades.json  tickers.json
scripts/binance/tests/: smoke.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/contact/: route.ts
src/app/datenschutz/: page.tsx
src/app/impressum/: page.tsx
src/app/kontakt/: page.tsx
src/app/leistungen/: page.tsx
src/app/ueber-mich/: page.tsx
src/components/: About.astro  Contact.astro  Footer.astro  Hero.astro  Nav.astro  Newsletter.astro  Projects.astro  TechStack.astro
src/components/layout/: Footer.tsx  Header.tsx
src/components/sections/: AboutTeaser.tsx  CTABanner.tsx  ContactSection.tsx  FAQSection.tsx  HeroSection.tsx  ProcessSection.tsx  ServicesGrid.tsx  ServicesTeaser.tsx  StorySection.tsx  TestimonialsSection.tsx  TimelineSection.tsx  TrustBar.tsx  ValuesSection.tsx
src/components/ui/: Button.tsx  Card.tsx  PageHero.tsx  SectionHeader.tsx
src/pages/: datenschutz.astro  impressum.astro  index.astro  softwareentwickler-muelheim.astro  softwareentwickler-muenster.astro  tools.astro
src/pages/blog/: index.astro  mein-stack-freelance-developer-2026.astro
src/styles/: global.css
tools/: Deposit-LocalEnv.ps1  Deposit-VpsKey.ps1  README.md  selftest-DepositLocalEnv.ps1  selftest-DepositVpsKey.ps1
