[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-cache"
version = "0.1.0"
description = "Semantic response cache in front of OpenAI-compatible LLM gateways (ollama-proxy, llm-gateway)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dennis Reichenberg" },
]
keywords = ["llm", "cache", "openai-compatible", "ollama", "semantic", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
]
redis = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "httpx>=0.27.0",
]

[project.scripts]
llm-cache = "llm_cache.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cache"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
