[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-usage"
version = "0.1.0"
description = "Historical request and cost accounting across all LLM backends (local Ollama/vLLM + cloud)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dennis Reichenberg" },
]
keywords = ["llm", "usage", "cost", "accounting", "ollama", "vllm", "litellm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
llm-usage = "llm_usage.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_usage"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
