[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-monitor"
version = "0.1.0"
description = "Real-time TUI dashboard for Ollama inference monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dennis Reichenberg" },
]
keywords = ["ollama", "tui", "monitoring", "dashboard", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
    "ruff>=0.5",
]

[project.scripts]
ollama-monitor = "ollama_monitor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_monitor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
